# armchair

./: LICENCE  Makefile  armchair.cabal  stack.yaml
lib/Armchair/: Nothing.hs
src/: ArmchairProgram.hs
tests/: CheckProgram.hs  Example.hs
